--- a/TankGame/index.html
+++ b/TankGame/index.html
@@ -10,7 +10,10 @@
 	<script src="libraries/p5.js"></script>
 	<script src="libraries/p5.dom.js"></script>
 	<script src="libraries/p5.sound.js"></script>
+  <script src="bullet.js"></script>
+	<script src="wall_map.js"></script>
 	<script src="sketch.js"></script>
+
 
 	<style>
 		body {
